# weave

./: .codeclimate.yml  .env  .env.prod.test  .gitignore  AGENTS.md  Dockerfile  Dockerfile.circleci_weave  Dockerfile.circleci_weave-base  Dockerfile.production_weave  Dockerfile.production_weave-base  Dockerfile.vite_weave  Dockerfile.vite_weave-base  Dockerfile.weave  Dockerfile.weave-base  LICENSE  Makefile  README.md  docker-compose.yml  phpcs.xml
backend/: .eslintrc.json  README.md  manage.py  package.json  pyproject.toml  pytest.ini  ruff.toml  vite.config.js
backend/accounts/: models.py
backend/accounts/migrations/: 0001_initial.py
backend/curriculum/: admin.py  urls.py  views.py
backend/curriculum/migrations/: 0001_initial.py  0002_person_date_of_birth_person_first_experience.py
backend/curriculum/models/: person.py
backend/curriculum/serializers/: __init__.py  person_serializer.py
backend/curriculum/tests/: test_person.py
backend/curriculum/views/: __init__.py  default_person_view.py  person_retrieve_view.py
backend/home/templates/: home.html
backend/weave/: admin.py  apps.py  models.py  settings.py  urls.py
source/: .eslintrc.yml  .flake8  Makefile  manage.py  package.json  pyproject.toml  requirements.txt  requirements_prod.txt  vite.config.js
source/frontend/src/: main.jsx  styles.css
source/home/: urls.py
source/home/templates/: home.html
source/mysql/: create_dev_database.sql
source/src/: App.jsx  main.jsx
source/weave/: asgi.py  settings.py  urls.py  wsgi.py
source/weave_app/: asgi.py  settings.py  urls.py  wsgi.py
(+183 files in other folders)
