[project]
name = "weave"
version = "0.1.0"
description = "Weave Project"
authors = [
    {name = "Darthjee"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (==5.2.5)",
    "django-admin (==2.0.2)",
    "mysqlclient (==2.2.7)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
pytest-django = "4.11.1"
ruff = "0.13.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
